import { GeneratedType } from "@cosmjs/proto-signing";
import { QueryAccountAddressByIDRequest } from "./types/cosmos/auth/v1beta1/query";
import { QueryAccountInfoResponse } from "./types/cosmos/auth/v1beta1/query";
import { GenesisState } from "./types/cosmos/auth/v1beta1/genesis";
import { MsgUpdateParams } from "./types/cosmos/auth/v1beta1/tx";
import { QueryParamsResponse } from "./types/cosmos/auth/v1beta1/query";
import { AddressBytesToStringResponse } from "./types/cosmos/auth/v1beta1/query";
import { QueryAccountAddressByIDResponse } from "./types/cosmos/auth/v1beta1/query";
import { QueryAccountInfoRequest } from "./types/cosmos/auth/v1beta1/query";
import { QueryAccountsResponse } from "./types/cosmos/auth/v1beta1/query";
import { Bech32PrefixResponse } from "./types/cosmos/auth/v1beta1/query";
import { AddressBytesToStringRequest } from "./types/cosmos/auth/v1beta1/query";
import { BaseAccount } from "./types/cosmos/auth/v1beta1/auth";
import { QueryAccountResponse } from "./types/cosmos/auth/v1beta1/query";
import { QueryModuleAccountByNameResponse } from "./types/cosmos/auth/v1beta1/query";
import { Bech32PrefixRequest } from "./types/cosmos/auth/v1beta1/query";
import { ModuleCredential } from "./types/cosmos/auth/v1beta1/auth";
import { QueryAccountsRequest } from "./types/cosmos/auth/v1beta1/query";
import { QueryAccountRequest } from "./types/cosmos/auth/v1beta1/query";
import { ModuleAccount } from "./types/cosmos/auth/v1beta1/auth";
import { AddressStringToBytesResponse } from "./types/cosmos/auth/v1beta1/query";
import { QueryModuleAccountByNameRequest } from "./types/cosmos/auth/v1beta1/query";
import { AddressStringToBytesRequest } from "./types/cosmos/auth/v1beta1/query";
import { Params } from "./types/cosmos/auth/v1beta1/auth";
import { MsgUpdateParamsResponse } from "./types/cosmos/auth/v1beta1/tx";
import { QueryParamsRequest } from "./types/cosmos/auth/v1beta1/query";
import { QueryModuleAccountsResponse } from "./types/cosmos/auth/v1beta1/query";
import { QueryModuleAccountsRequest } from "./types/cosmos/auth/v1beta1/query";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/cosmos.auth.v1beta1.QueryAccountAddressByIDRequest", QueryAccountAddressByIDRequest],
    ["/cosmos.auth.v1beta1.QueryAccountInfoResponse", QueryAccountInfoResponse],
    ["/cosmos.auth.v1beta1.GenesisState", GenesisState],
    ["/cosmos.auth.v1beta1.MsgUpdateParams", MsgUpdateParams],
    ["/cosmos.auth.v1beta1.QueryParamsResponse", QueryParamsResponse],
    ["/cosmos.auth.v1beta1.AddressBytesToStringResponse", AddressBytesToStringResponse],
    ["/cosmos.auth.v1beta1.QueryAccountAddressByIDResponse", QueryAccountAddressByIDResponse],
    ["/cosmos.auth.v1beta1.QueryAccountInfoRequest", QueryAccountInfoRequest],
    ["/cosmos.auth.v1beta1.QueryAccountsResponse", QueryAccountsResponse],
    ["/cosmos.auth.v1beta1.Bech32PrefixResponse", Bech32PrefixResponse],
    ["/cosmos.auth.v1beta1.AddressBytesToStringRequest", AddressBytesToStringRequest],
    ["/cosmos.auth.v1beta1.BaseAccount", BaseAccount],
    ["/cosmos.auth.v1beta1.QueryAccountResponse", QueryAccountResponse],
    ["/cosmos.auth.v1beta1.QueryModuleAccountByNameResponse", QueryModuleAccountByNameResponse],
    ["/cosmos.auth.v1beta1.Bech32PrefixRequest", Bech32PrefixRequest],
    ["/cosmos.auth.v1beta1.ModuleCredential", ModuleCredential],
    ["/cosmos.auth.v1beta1.QueryAccountsRequest", QueryAccountsRequest],
    ["/cosmos.auth.v1beta1.QueryAccountRequest", QueryAccountRequest],
    ["/cosmos.auth.v1beta1.ModuleAccount", ModuleAccount],
    ["/cosmos.auth.v1beta1.AddressStringToBytesResponse", AddressStringToBytesResponse],
    ["/cosmos.auth.v1beta1.QueryModuleAccountByNameRequest", QueryModuleAccountByNameRequest],
    ["/cosmos.auth.v1beta1.AddressStringToBytesRequest", AddressStringToBytesRequest],
    ["/cosmos.auth.v1beta1.Params", Params],
    ["/cosmos.auth.v1beta1.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/cosmos.auth.v1beta1.QueryParamsRequest", QueryParamsRequest],
    ["/cosmos.auth.v1beta1.QueryModuleAccountsResponse", QueryModuleAccountsResponse],
    ["/cosmos.auth.v1beta1.QueryModuleAccountsRequest", QueryModuleAccountsRequest],
    
];

export { msgTypes }